--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1699,6 +1699,11 @@ select {
   line-height: 1.75rem;
 }
 
+.text-3xxl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
